Added basic state for configuring GitFS with Pygit2

--- a/setup/gitsetup.conf
+++ b/setup/gitsetup.conf
@@ -2,14 +2,14 @@ fileserver_backend:
   - gitfs
 
 gitfs_update_interval: 300
-
+gitfs_provider: pygit2
 gitfs_ref_types:
   - branch
 
 gitfs_remotes:
   - git@github.com:doesitblend/saltstates.git:
-    - pubkey: '/root/.ssh/id_rsa.pub'
-    - privkey: '/root/.ssh/id_rsa'
+    - pubkey: '/etc/salt/pki/master/github'
+    - privkey: '/etc/salt/pki/master/github.pub'
     - saltenv:
       - base:
         - ref: master
