Updated git configuration to use unauthenticated HTTPS instead of SSH

--- a/setup/gitsetup.conf
+++ b/setup/gitsetup.conf
@@ -2,14 +2,12 @@ fileserver_backend:
   - gitfs
 
 gitfs_update_interval: 300
-gitfs_provider: pygit2
+gitfs_provider: gitpython
 gitfs_ref_types:
   - branch
 
 gitfs_remotes:
-  - git@github.com:doesitblend/saltstates.git:
-    - pubkey: '/etc/salt/pki/master/github'
-    - privkey: '/etc/salt/pki/master/github.pub'
+  - https://github.com/doesitblend/saltstates.git:
     - saltenv:
       - base:
         - ref: master
@@ -19,4 +17,4 @@ gitfs_remotes:
         - root: staging
       - prod:
         - ref: prod
-        - root: prod
+        - root: base
